--- a/src/main/resources/assets/beycraft/blockstates/launcherhandle.json
+++ b/src/main/resources/assets/beycraft/blockstates/launcherhandle.json
@@ -30,14 +30,18 @@
                     "scale": 0.5
                 },
                 "firstperson_lefthand": {
-                    "rotation": [ { "x": 0 }, { "y": 180 }, { "z": 180 } ],
-                    "translation": [ 0.5, 0.15, 0 ],
+                    "rotation": [ { "x": 0 }, { "y": 0 }, { "z": 0 } ],
+                    "translation": [ 0.15, 0.15, 0 ],
                     "scale": 0.5
                 },
                 "ground": {
                     "rotation": [ { "x": 0 }, { "y": 0 }, { "z": 0 } ],
                     "translation": [ 0.25, 0.1, 0.25 ],
                     "scale": 0.5
+                },
+                "fixed": {
+                	"rotation": [ { "x": -90 }, { "y": 0 }, { "z": 0 } ],
+                    "translation": [ 0.5, 0.5, -0.45 ]
                 }
 			}
         }
