valt armors added

--- a/src/main/resources/assets/beycraft/models/item/turbo_valt_leggings.json
+++ b/src/main/resources/assets/beycraft/models/item/turbo_valt_leggings.json
@@ -1,7 +1,7 @@
 {
     "parent": "item/generated",
     "textures": {
-        "layer0": "beycraft:items/aiger_leggins"
+        "layer0": "beycraft:items/turbo_valt_leggings"
     },
     "display": {
         "head": {
