--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.0'
+version = '0.0.7'
 group = 'com.grillo78.beycraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'beycraft'
 
@@ -94,10 +94,6 @@ repositories {
     maven { url "https://maven.blamejared.com" }
     mavenLocal()
     maven {
-        name = "CurseForge"
-        url = "https://minecraft.curseforge.com/api/maven/"
-    }
-    maven {
         url 'https://jitpack.io'
     }
     flatDir {
@@ -110,10 +106,12 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.15.2-31.1.27'
+    minecraft 'net.minecraftforge:forge:1.15.2-31.1.37'
     compile fg.deobf("vazkii.patchouli:Patchouli:1.15.2-1.2-29.147")
     compile name: 'baubles-1.7.1-1.15.2-deobf'
 //    compile fg.deobf('com.github.lazyMods:Baubles:1.7.1')
+    compile fg.deobf("curse.maven:chineseworkshop:2869421")
+    compile fg.deobf("curse.maven:kiwi:2887957")
     compile fg.deobf("curse.maven:mrcrayfish-furniture-mod:2853267")
     compile fg.deobf("curse.maven:mrcrayfish-vehicle-mod:2899889")
 //    compile fg.deobf("curse.maven:performant:2875938")
