started Blader Level Capability

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ minecraft {
             // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
 
+            args '--username', 'grillo78', '--uuid', 'b8a6cebf-7221-4d53-b120-6e759f14fbfb'
             mods {
                 beycraft {
                     source sourceSets.main
@@ -101,21 +102,18 @@ repositories {
     }
 }
 
-
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.15.2-31.1.37'
+    minecraft 'net.minecraftforge:forge:1.15.2-31.1.46'
     compile fg.deobf("vazkii.patchouli:Patchouli:1.15.2-1.2-29.147")
     compile name: 'baubles-1.7.1-1.15.2-deobf'
-//    compile fg.deobf('com.github.lazyMods:Baubles:1.7.1')
     compile fg.deobf("curse.maven:chineseworkshop:2869421")
     compile fg.deobf("curse.maven:kiwi:2887957")
-    compile fg.deobf("curse.maven:mrcrayfish-furniture-mod:2853267")
-    compile fg.deobf("curse.maven:mrcrayfish-vehicle-mod:2899889")
-//    compile fg.deobf("curse.maven:performant:2875938")
-    compile fg.deobf("curse.maven:obfuscate:2866341")
+//    compile fg.deobf("curse.maven:mrcrayfish-furniture-mod:2853267")
+//    compile fg.deobf("curse.maven:mrcrayfish-vehicle-mod:2899889")
+    compile fg.deobf("curse.maven:obfuscate:2912283")
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
     // compile "some.group:artifact:version"
