--- a/src/main/resources/assets/beycraft/models/item/launcherhandle.json
+++ b/src/main/resources/assets/beycraft/models/item/launcherhandle.json
@@ -24,13 +24,13 @@
     "thirdperson_righthand": {
       "rotation": [
         0,
-        0,
+        180,
         0
       ],
       "translation": [
-        0.14,
         0,
-        0
+        0,
+        -1.5
       ],
       "scale": [
         0.25,
@@ -45,31 +45,31 @@
         0
       ],
       "translation": [
-        4,
-        4,
-        8
+        0,
+        0,
+        0
       ],
       "scale": [
-        1.5,
-        1.5,
-        1.5
+        0.35,
+        0.35,
+        0.35
       ]
     },
     "firstperson_righthand": {
       "rotation": [
         0,
-        0,
+        180,
         0
       ],
       "translation": [
-        8,
         4,
-        0
+        4,
+        -1.5
       ],
       "scale": [
-        0.5,
-        0.5,
-        0.5
+        0.25,
+        0.25,
+        0.25
       ]
     },
     "firstperson_lefthand": {
@@ -84,9 +84,9 @@
         0
       ],
       "scale": [
-        0.5,
-        0.5,
-        0.5
+        0.25,
+        0.25,
+        0.25
       ]
     },
     "ground": {
@@ -96,14 +96,14 @@
         0
       ],
       "translation": [
-        4,
-        4,
-        4
+        0,
+        0,
+        2
       ],
       "scale": [
-        0.5,
-        0.5,
-        0.5
+        0.25,
+        0.25,
+        0.25
       ]
     },
     "fixed": {
@@ -113,9 +113,14 @@
         0
       ],
       "translation": [
-        8,
-        8,
-        -7
+        2,
+        9,
+        -2
+      ],
+      "scale": [
+        0.4,
+        0.4,
+        0.4
       ]
     }
   }
