--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -24,9 +24,9 @@ displayName="Beycraft Mod" #mandatory
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile="logo.png" #optional
 # A text field displayed in the mod UI
-credits="Thanks to all the people that help with assets and suggestions" #optional
+credits="Thanks to all the people that help with assets and the people of MCMC, MMD and Forge discord servers for the help." #optional
 # A text field displayed in the mod UI
-authors="grillo78, Marctron" #optional
+authors="grillo78, Marctron, Ángel, Pigiih" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
 This mod adds beyblades to minecraft, you can add content packs in the folder called BeyParts inside of the minecraft folder
@@ -38,7 +38,7 @@ This mod adds beyblades to minecraft, you can add content packs in the folder ca
     # Does this dependency have to exist - if not, ordering below must be specified
     mandatory=true #mandatory
     # The version range of the dependency
-    versionRange="[30.0.19,)" #mandatory
+    versionRange="[31.1.55,)" #mandatory
     # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
     ordering="NONE"
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
