--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,12 @@ buildscript {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
+        maven {url='https://repo.spongepowered.org/maven/'}
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
         classpath "com.wynprice.cursemaven:CurseMaven:2.1.1"
+        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
     }
 }
 apply plugin: "com.wynprice.cursemaven"
@@ -18,7 +20,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '0.10'
+version = '0.11'
 group = 'com.grillo78.beycraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'beycraft'
 
@@ -30,7 +32,7 @@ minecraft {
     // stable_#            Stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'snapshot', version: '20200315-1.15.1'
+    mappings channel: 'snapshot', version: '20200514-1.16'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -40,6 +42,7 @@ minecraft {
     runs {
         client {
             workingDirectory project.file('run')
+            arg "-mixin.config="+archivesBaseName+".mixins.json"
 
             // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
@@ -62,6 +65,7 @@ minecraft {
 
         server {
             workingDirectory project.file('run')
+            arg "-mixin.config="+archivesBaseName+".mixins.json"
 
             // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
@@ -105,20 +109,22 @@ repositories {
     flatDir {
         dirs 'lib'
     }
+    maven {url='https://dist.creeper.host/Sponge/maven'}
 }
 
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.15.2-31.2.9'
-    compile fg.deobf("vazkii.patchouli:Patchouli:1.15.2-1.2-34.184")
-    compile name: 'baubles-1.7.1-1.15.2-deobf'
+    minecraft 'net.minecraftforge:forge:1.16.1-32.0.25'
+    compile 'org.spongepowered:mixin:0.8'
+//    compile fg.deobf("vazkii.patchouli:Patchouli:1.15.2-1.2-34.184")
+//    compile name: 'baubles-1.7.1-1.15.2-deobf'
 //    compile fg.deobf("curse.maven:chineseworkshop:2869421")
 //    compile fg.deobf("curse.maven:kiwi:2887957")
 //    compile fg.deobf("curse.maven:mrcrayfish-furniture-mod:2853267")
 //    compile fg.deobf("curse.maven:mrcrayfish-vehicle-mod:2899889")
-    compile fg.deobf("curse.maven:obfuscate:2946425")
+//    compile fg.deobf("curse.maven:obfuscate:2946425")
 //    compile fg.deobf("curse.maven:advanced-skin-customization:2901659")
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
@@ -150,7 +156,8 @@ jar {
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : "${version}",
                 "Implementation-Vendor"   : "beycraft-team",
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "MixinConfigs": "beycraft.mixins.json"
         ])
     }
 }
@@ -175,4 +182,10 @@ publishing {
             url "file:///${project.projectDir}/mcmodsrepo"
         }
     }
+}
+
+apply plugin: 'org.spongepowered.mixin'
+
+mixin {
+    add sourceSets.main, "beycraft.refmap.json"
 }
