--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -38,7 +38,7 @@ This mod adds beyblades to minecraft, you can add content packs in the folder ca
     # Does this dependency have to exist - if not, ordering below must be specified
     mandatory=true #mandatory
     # The version range of the dependency
-    versionRange="[31.1.55,)" #mandatory
+    versionRange="[32.0.0,)" #mandatory
     # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
     ordering="NONE"
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
@@ -47,12 +47,12 @@ This mod adds beyblades to minecraft, you can add content packs in the folder ca
 [[dependencies.beycraft]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.15.2]"
+    versionRange="[1.16.1]"
     ordering="NONE"
     side="BOTH"
-[[dependencies.beycraft]]
-    modId="obfuscate"
-    mandatory=true
-    versionRange="[0.3.4,)"
-    ordering="AFTER"
-    side="BOTH"
+#[[dependencies.beycraft]]
+#    modId="obfuscate"
+#    mandatory=true
+#    versionRange="[0.3.4,)"
+#    ordering="AFTER"
+#    side="BOTH"
