--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
-        maven {url='https://repo.spongepowered.org/maven/'}
+        maven { url = 'https://repo.spongepowered.org/maven/' }
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
@@ -20,7 +20,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '0.11'
+version = '0.12'
 group = 'com.grillo78.beycraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'beycraft'
 
@@ -32,7 +32,7 @@ minecraft {
     // stable_#            Stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'snapshot', version: '20200514-1.16'
+    mappings channel: 'snapshot', version: '20200707-1.16.1'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -42,7 +42,7 @@ minecraft {
     runs {
         client {
             workingDirectory project.file('run')
-            arg "-mixin.config="+archivesBaseName+".mixins.json"
+            arg "-mixin.config=" + archivesBaseName + ".mixins.json"
 
             // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
@@ -65,7 +65,7 @@ minecraft {
 
         server {
             workingDirectory project.file('run')
-            arg "-mixin.config="+archivesBaseName+".mixins.json"
+            arg "-mixin.config=" + archivesBaseName + ".mixins.json"
 
             // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
@@ -109,15 +109,18 @@ repositories {
     flatDir {
         dirs 'lib'
     }
-    maven {url='https://dist.creeper.host/Sponge/maven'}
+    maven { url = 'https://dist.creeper.host/Sponge/maven' }
+    maven { url = "https://maven.theillusivec4.top/" }
 }
 
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.16.1-32.0.25'
+    minecraft 'net.minecraftforge:forge:1.16.1-32.0.75'
     compile 'org.spongepowered:mixin:0.8'
+    runtimeOnly fg.deobf("top.theillusivec4.curios:curios:FORGE-1.16.1-3.0-beta4")
+    compileOnly fg.deobf("top.theillusivec4.curios:curios:FORGE-1.16.1-3.0-beta4:api")
 //    compile fg.deobf("vazkii.patchouli:Patchouli:1.15.2-1.2-34.184")
 //    compile name: 'baubles-1.7.1-1.15.2-deobf'
 //    compile fg.deobf("curse.maven:chineseworkshop:2869421")
@@ -157,7 +160,7 @@ jar {
                 "Implementation-Version"  : "${version}",
                 "Implementation-Vendor"   : "beycraft-team",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                "MixinConfigs": "beycraft.mixins.json"
+                "MixinConfigs"            : "beycraft.mixins.json"
         ])
     }
 }
