--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ minecraft {
     // stable_#            Stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'snapshot', version: '20200707-1.16.1'
+    mappings channel: 'snapshot', version: '20200723-1.16.1'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -42,7 +42,7 @@ minecraft {
     runs {
         client {
             workingDirectory project.file('run')
-            arg "-mixin.config=" + archivesBaseName + ".mixins.json"
+            args '-mixin.config=beycraft.mixins.json'
 
             // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
@@ -60,12 +60,12 @@ minecraft {
         clientWithCredentials {
             parent runs.client
 
-            args '--username', 'grillo78', '--uuid', 'b8a6cebf-7221-4d53-b120-6e759f14fbfb'
+            args '-mixin.config=beycraft.mixins.json', '--username', 'grillo78', '--uuid', 'b8a6cebf-7221-4d53-b120-6e759f14fbfb'
         }
 
         server {
             workingDirectory project.file('run')
-            arg "-mixin.config=" + archivesBaseName + ".mixins.json"
+            arg "-mixin.config=beycraft.mixins.json"
 
             // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
@@ -111,24 +111,18 @@ repositories {
     }
     maven { url = 'https://dist.creeper.host/Sponge/maven' }
     maven { url = "https://maven.theillusivec4.top/" }
+
 }
 
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.16.1-32.0.75'
-    compile 'org.spongepowered:mixin:0.8'
-    runtimeOnly fg.deobf("top.theillusivec4.curios:curios:FORGE-1.16.1-3.0-beta4")
-    compileOnly fg.deobf("top.theillusivec4.curios:curios:FORGE-1.16.1-3.0-beta4:api")
-//    compile fg.deobf("vazkii.patchouli:Patchouli:1.15.2-1.2-34.184")
-//    compile name: 'baubles-1.7.1-1.15.2-deobf'
-//    compile fg.deobf("curse.maven:chineseworkshop:2869421")
-//    compile fg.deobf("curse.maven:kiwi:2887957")
-//    compile fg.deobf("curse.maven:mrcrayfish-furniture-mod:2853267")
-//    compile fg.deobf("curse.maven:mrcrayfish-vehicle-mod:2899889")
-//    compile fg.deobf("curse.maven:obfuscate:2946425")
-//    compile fg.deobf("curse.maven:advanced-skin-customization:2901659")
+    minecraft 'net.minecraftforge:forge:1.16.2-33.0.5'
+    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.16.2-4.0.0.0")
+    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.16.2-4.0.0.0:api")
+    compile fg.deobf("curse.maven:camera-mod:3031592")
+    implementation 'com.github.Vatuu:discord-rpc:1.6.2'
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
     // compile "some.group:artifact:version"
