--- a/build.gradle
+++ b/build.gradle
@@ -14,13 +14,13 @@ buildscript {
         classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
     }
 }
-apply plugin: "com.wynprice.cursemaven"
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
+apply plugin: "com.wynprice.cursemaven"
 
-version = '1.0'
+version = '1.2'
 group = 'com.grillo78.beycraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'beycraft'
 
@@ -114,6 +114,11 @@ repositories {
 
 }
 
+configurations {
+    embed
+    compile.extendsFrom(embed)
+}
+
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
@@ -121,8 +126,8 @@ dependencies {
     minecraft 'net.minecraftforge:forge:1.16.2-33.0.5'
     runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.16.2-4.0.0.0")
     compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.16.2-4.0.0.0:api")
-//    compile fg.deobf("curse.maven:camera-mod:3031592")
-    implementation 'com.github.Vatuu:discord-rpc:1.6.2'
+    compile fg.deobf("curse.maven:camera-mod:3031592")
+    embed 'com.github.Vatuu:discord-rpc:1.6.2'
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
     // compile "some.group:artifact:version"
@@ -145,6 +150,7 @@ dependencies {
 
 // Example for how to get properties into the manifest for reading by the runtime..
 jar {
+    from configurations.embed.collect {it.isDirectory() ? it : zipTree(it)}
     manifest {
         attributes([
                 "Specification-Title"     : "beycraft",
