--- a/build.gradle
+++ b/build.gradle
@@ -12,15 +12,18 @@ buildscript {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
         classpath "com.wynprice.cursemaven:CurseMaven:2.1.1"
         classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+        classpath "com.github.jengelman.gradle.plugins:shadow:1.2.4"
     }
 }
+apply plugin: "com.wynprice.cursemaven"
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
-apply plugin: "com.wynprice.cursemaven"
+apply plugin: "com.github.johnrengelman.shadow"
+apply plugin: 'java'
 
-version = '1.2'
+version = '1.4'
 group = 'com.grillo78.beycraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'beycraft'
 
@@ -115,19 +118,33 @@ repositories {
 }
 
 configurations {
-    embed
-    compile.extendsFrom(embed)
+    shade
+    compile.extendsFrom shade
+}
+
+shadowJar {
+    configurations = [project.configurations.shade]
+    exclude 'com/sun/jna/**'
+    relocate 'com.google', 'drpcshadow.com.google'
+}
+
+reobf {
+    shadowJar {
+        dependsOn tasks.createMcpToSrg
+        mappings = tasks.createMcpToSrg.outputs.files.singleFile
+    } // Reobfuscate the shadowed JAR
 }
 
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.16.2-33.0.5'
-    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.16.2-4.0.0.0")
-    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.16.2-4.0.0.0:api")
-    compile fg.deobf("curse.maven:camera-mod:3031592")
-    embed 'com.github.Vatuu:discord-rpc:1.6.2'
+    minecraft 'net.minecraftforge:forge:1.16.2-33.0.61'
+    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.16.2-4.0.0.1")
+    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.16.2-4.0.0.1:api")
+    shade "com.google.guava:guava:29.0-jre"
+    shade 'com.github.Vatuu:discord-rpc:1.6.2'
+    shade 'com.github.Vatuu:discord-rpc-binaries:3.4.0'
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
     // compile "some.group:artifact:version"
@@ -150,7 +167,6 @@ dependencies {
 
 // Example for how to get properties into the manifest for reading by the runtime..
 jar {
-    from configurations.embed.collect {it.isDirectory() ? it : zipTree(it)}
     manifest {
         attributes([
                 "Specification-Title"     : "beycraft",
