why this crash in all places????

--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,7 @@ repositories {
     maven {
         url "https://www.cursemaven.com"
     }
+    mavenCentral()
     flatDir {
         dirs 'libs'
     }
@@ -141,6 +142,7 @@ dependencies {
     minecraft 'net.minecraftforge:forge:1.16.5-36.0.58'
 
     compile 'xyz.heroesunited:hu-core:2.5.2-8.8a'
+    implementation 'io.gitlab.friedrichlp:renderlib:1.0.0-pre2'
     implementation 'com.github.Vatuu:discord-rpc:1.6.2'
 
 }
