--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'maven-publish'
 apply plugin: "com.github.johnrengelman.shadow"
 apply plugin: 'java'
 
-version = '1.7-beta-14'
+version = '1.7.8'
 group = 'ga.beycraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'beycraft'
 
@@ -115,6 +115,8 @@ repositories {
     maven { url 'https://maven.explodingcreeper.me/' }
     maven { url 'https://repo.repsy.io/mvn/gandiber/geckolib' }
     maven { url 'http://harleyoconnor.com/maven' }
+    maven { url 'https://maven.hypherionmc.me/releases' }
+    maven { url 'https://maven.explodingcreeper.me/' }
     maven {
         url "https://www.cursemaven.com"
     }
@@ -150,6 +152,7 @@ dependencies {
     compile fg.deobf('xyz.heroesunited:hu-core:2.5.38')
     shade 'ga.beycraft:RenderLib:1.0.0-pre4'
     compile fg.deobf('curse.maven:furniture-55438:3346467')
+    compileOnly fg.deobf('me.hypherionmc:RGBLib-moj:1.0')
 //    shade 'com.oneandone:composite-jks:1.0'
 
 }
