--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'maven-publish'
 apply plugin: "com.github.johnrengelman.shadow"
 apply plugin: 'java'
 
-version = '1.7.31'
+version = '1.7.32'
 group = 'ga.beycraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'beycraft'
 
@@ -148,7 +148,7 @@ dependencies {
     minecraft 'net.minecraftforge:forge:1.16.5-36.0.58'
 
     compile fg.deobf('xyz.heroesunited:hu-core:2.5.38')
-    shade 'ga.beycraft:RenderLib:1.0.0-pre6'
+    shade 'ga.beycraft:RenderLib:1.0.0-pre7-test-2'
     compile fg.deobf('curse.maven:furniture-55438:3346467')
 //    shade 'com.oneandone:composite-jks:1.0'
 
