--- a/src/main/resources/assets/beycraft/animations/launches.animation.json
+++ b/src/main/resources/assets/beycraft/animations/launches.animation.json
@@ -14,6 +14,42 @@
 						}
 					}
 				},
+				"bipedRightArm": {
+					"rotation": {
+						"0.0": {
+							"vector": [0, 0, 0]
+						},
+						"0.7": {
+							"vector": [-60.19934, -75.51926, 5.68491]
+						}
+					},
+					"position": {
+						"0.0": {
+							"vector": [0, 0, 0]
+						},
+						"0.7": {
+							"vector": [-2, 0, -1]
+						}
+					}
+				},
+				"bipedLeftArm": {
+					"rotation": {
+						"0.0": {
+							"vector": [0, 0, 0]
+						},
+						"0.7": {
+							"vector": [-96.57495, 49.41933, -8.84179]
+						}
+					},
+					"position": {
+						"0.0": {
+							"vector": [0, 0, 0]
+						},
+						"0.7": {
+							"vector": [2, 0, 2]
+						}
+					}
+				},
 				"bipedRightLeg": {
 					"rotation": {
 						"0.0": {
