--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -38,3 +38,9 @@ mandatory=true
 versionRange="[1.16.4-53.2,)"
 ordering="AFTER"
 side="BOTH"
+[[dependencies.beycraft]]
+modId="parcool"
+mandatory=true
+versionRange="[1.16.5-2.1.0.0-R,)"
+ordering="AFTER"
+side="BOTH"
