--- a/build.gradle
+++ b/build.gradle
@@ -140,7 +140,7 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 dependencies {
     minecraft 'net.minecraftforge:forge:1.16.5-36.2.29'
 
-    implementation fg.deobf('xyz.heroesunited:hu-core:2.5.4')
+    implementation fg.deobf("grillo78:clothes_mod:0.2")
 //    implementation fg.deobf('curse.maven:parcool-482378:4257967')
     implementation fg.deobf("curse.maven:parcool-482378:4772411")
     shade 'ga.beycraft:RenderLib:1.0.0-pre7-test-2'
